syntax = "proto3";

option java_package = "hmda.persistence.model.serialization";
option optimize_for = SPEED;

message TransmittalSheetMessage {
    int32 id = 1;
    int32 agencyCode = 2;
    int64 timestamp = 3;
    int32 activityYear = 4;
    string taxId = 5;
    int32 totalLines = 6;
    TsRespondentMessage respondent = 7;
    TsParentMessage parent = 8;
    ContactMessage contact = 9;
}

message TsRespondentMessage {
    string id = 1;
    string name = 2;
    string address = 3;
    string city = 4;
    string state = 5;
    string zipCode = 6;
}

message TsParentMessage {
    string name = 1;
    string address = 2;
    string city = 3;
    string state = 4;
    string zipCode = 5;
}

message ContactMessage {
    string name = 1;
    string phone = 2;
    string fax = 3;
    string email = 4;
}
